# emobench

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  GETTING_STARTED.md  README.md  gradio_app.py  main.py  plan.md  pyproject.toml
.virtual_documents/notebooks/: 01_data_exploration.ipynb
config/: datasets.yaml  evaluation.yaml  models.yaml  training.yaml
docs/: MODEL_CONFIGURATION.md  QUICK_REFERENCE.md  README.md
notebooks/: 01_data_exploration.ipynb  02_model_comparison.ipynb  03_results_analysis.ipynb
scripts/: clear_data.sh  download_models.sh  evaluate.py  evaluate_all.sh  prepare_data.sh  train.py  train_all.sh  train_model.sh
src/: __init__.py  cli.py
src/comparison/: __init__.py  aggregator.py  comparator.py  ranking.py  reports.py  statistical.py
src/data/: __init__.py  loader.py  preprocessor.py
src/evaluation/: __init__.py  benchmark.py  cli.py  metrics.py  profiler.py  results.py
src/models/: lora_config.py  model_registry.py  quantization.py
src/training/: __init__.py  callbacks.py  cli.py  optimizer.py  trainer.py
src/utils/: __init__.py  device.py
src/visualization/: __init__.py  cli.py  dashboard.py  plots.py  reports.py
tests/: test_data.py  test_evaluation.py  test_models.py  test_training.py
